objects/Rate_Card__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banquet Halls</fullName>
                </value>
                <value>
                    <fullName>Bar Services &amp; Beverages</fullName>
                </value>
                <value>
                    <fullName>Barn &amp; Farm Weddings</fullName>
                </value>
                <value>
                    <fullName>Beach Weddings</fullName>
                </value>
                <value>
                    <fullName>Boat Weddings</fullName>
                </value>
                <value>
                    <fullName>Church &amp; Temple Weddings</fullName>
                </value>
                <value>
                    <fullName>Country Club Weddings</fullName>
                </value>
                <value>
                    <fullName>Dance Lessons</fullName>
                </value>
                <value>
                    <fullName>Garden Weddings</fullName>
                </value>
                <value>
                    <fullName>Historic Weddings</fullName>
                </value>
                <value>
                    <fullName>Hotel Weddings</fullName>
                </value>
                <value>
                    <fullName>Mansion Weddings</fullName>
                </value>
                <value>
                    <fullName>Museum Weddings</fullName>
                </value>
                <value>
                    <fullName>Park &amp; Outdoor Weddings</fullName>
                </value>
                <value>
                    <fullName>Photo Booths</fullName>
                </value>
                <value>
                    <fullName>Rehearsal Dinner</fullName>
                </value>
                <value>
                    <fullName>Restaurant Weddings</fullName>
                </value>
                <value>
                    <fullName>Rooftop Weddings</fullName>
                </value>
                <value>
                    <fullName>Travel Agents</fullName>
                </value>
                <value>
                    <fullName>Waterfront Weddings</fullName>
                </value>
                <value>
                    <fullName>Wedding Bands</fullName>
                </value>
                <value>
                    <fullName>Wedding Cakes</fullName>
                </value>
                <value>
                    <fullName>Wedding Caterers</fullName>
                </value>
                <value>
                    <fullName>Wedding Decor &amp; Lighting</fullName>
                </value>
                <value>
                    <fullName>Wedding DJs</fullName>
                </value>
                <value>
                    <fullName>Wedding Dresses</fullName>
                </value>
                <value>
                    <fullName>Wedding Favors</fullName>
                </value>
                <value>
                    <fullName>Wedding Florists</fullName>
                </value>
                <value>
                    <fullName>Wedding Hair &amp; Makeup</fullName>
                </value>
                <value>
                    <fullName>Wedding Invitations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Region/Market</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama - Birmingham, Huntsville, Tuscaloosa</fullName>
                </value>
                <value>
                    <fullName>Alabama - Montgomery, Dothan</fullName>
                </value>
                <value>
                    <fullName>Alaska - Anchorage, Fairbanks</fullName>
                </value>
                <value>
                    <fullName>American Samoa - American Samoa</fullName>
                </value>
                <value>
                    <fullName>Anguilla - Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda - Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arizona - Phoenix</fullName>
                </value>
                <value>
                    <fullName>Arizona - Tucson</fullName>
                </value>
                <value>
                    <fullName>Arkansas - Little Rock</fullName>
                </value>
                <value>
                    <fullName>Aruba - Aruba</fullName>
                </value>
                <value>
                    <fullName>Bahamas - Bahamas</fullName>
                </value>
                <value>
                    <fullName>Barbados - Barbados</fullName>
                </value>
                <value>
                    <fullName>Belize - Belize</fullName>
                </value>
                <value>
                    <fullName>Bermuda - Bermuda</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands - British Virgin Islands</fullName>
                </value>
                <value>
                    <fullName>California - Central Valley, Fresno, Bakersfield</fullName>
                </value>
                <value>
                    <fullName>California - Inland Empire</fullName>
                </value>
                <value>
                    <fullName>California - Los Angeles County</fullName>
                </value>
                <value>
                    <fullName>California - Monterey</fullName>
                </value>
                <value>
                    <fullName>California - Napa Valley, Sonoma County</fullName>
                </value>
                <value>
                    <fullName>California - Orange County</fullName>
                </value>
                <value>
                    <fullName>California - Sacramento, Modesto</fullName>
                </value>
                <value>
                    <fullName>California - San Diego, La Jolla, Coronado, Carlsbad</fullName>
                </value>
                <value>
                    <fullName>California - San Francisco, San Jose, Oakland</fullName>
                </value>
                <value>
                    <fullName>California - Santa Barbara, Ventura, San Luis Obispo</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands - Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Colorado - Denver, Colorado Springs, Boulder, Vail</fullName>
                </value>
                <value>
                    <fullName>Connecticut - Hartford, New Haven</fullName>
                </value>
                <value>
                    <fullName>Costa Rica - Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Delaware - Dover, Wilmington, DE/MD Beaches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tier__c</fullName>
        <label>Product Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Featured</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Spotlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Object</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Rate__c</fullName>
        <label>Yearly Rate</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Rate Card</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Rate Card  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>